# BookStore

./: local.docker-compose.yml
book-store-backend/: README.md  pyproject.toml
book-store-backend/authentication/: pyproject.toml
book-store-backend/src/: alembic.ini  config.py  main.py
book-store-backend/src/alembic/: env.py
book-store-backend/src/alembic/versions/: 3047a871e053_added_user_table.py
book-store-backend/src/db/: mixins.py  models.py
book-store-backend/src/users/: models.py
book-store-client/: README.md  package.json  pnpm-lock.yaml
